[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Logan Cox <mail@logan-cox.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.0"
black = "^22.3.0"
pymongo = "^4.0.2"
SQLAlchemy = "^1.4.32"
psycopg2-binary = "^2.9.3"
Flask-SQLAlchemy = "^2.5.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
